# loopback-capture

./: .gitignore  CMakeLists.txt  Makefile
loopback/: loopback.sln  loopback.vcxproj  loopback.vcxproj.filters
loopback/airplay/: glib.h  net_utils.c  net_utils.h  raop_client.c  raop_client.h  rtspconnection.c  rtspconnection.h  rtspdefs.c  rtspdefs.h  rtspmessage.c  rtspmessage.h
loopback/win32/: loopback-capture.cpp  loopback-capture.h  main.cpp  prefs.cpp  prefs.h  raop.cpp
